Fix bottom of text being cut off in FireFox
This needs to also be applied in
arcgis-web-appbuilder-2.5\WebAppBuilderForArcGIS\client\stemapp\themes\DashboardTheme\styles\dark-styles\widgets\coordinate-conversion.css

--- a/CoordinateConversion/css/darkTheme.css
+++ b/CoordinateConversion/css/darkTheme.css
@@ -62,7 +62,7 @@
     background-color: transparent;
     border: 1px solid #999999;
     color: #FFFFFF;
-    padding: 10px 0px 12px 14px;
+    padding: 10px 0px 10px 14px;
     margin: 0;
     letter-spacing: 0px;
     display: block;
