--- a/CoordinateConversion/css/style.css
+++ b/CoordinateConversion/css/style.css
@@ -62,7 +62,7 @@
     background: #FFFFFF;
     border: 1px solid #999999;
     color: #000000;
-    padding: 10px 0px 12px 14px;
+    padding: 10px 0px 10px 14px;
     margin: 0;
     letter-spacing: 0px;
     display: block;
